Use maplibre to draw geofencing layer

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -1113,6 +1113,9 @@ p#splash-text span {
 @media only screen and (min-width: 1300px) {
 }
 
+.leaflet-gl-layer {
+  z-index: 10;
+}
 
 /* =Media Query Size Indicator
 -------------------------------------------------------------- */
